added Bid History table to dashboard

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -594,4 +594,13 @@
   <data name="SubscriptionBuyInstructions" xml:space="preserve">
     <value>You are buying the subscription &lt;strong&gt;{Name}&lt;/strong&gt; for &lt;strong&gt;{FormattedPrice}&lt;/strong&gt;, this &lt;strong&gt;{Duration} day&lt;/strong&gt; subscription will give you a valid subscription until &lt;strong&gt;{NewExpiration}&lt;/strong&gt;. Your account will be updated as soon as the purchase is complete.</value>
   </data>
+  <data name="Auction" xml:space="preserve">
+    <value>Auction</value>
+  </data>
+  <data name="BidHistory" xml:space="preserve">
+    <value>Bid History</value>
+  </data>
+  <data name="TimeLeft" xml:space="preserve">
+    <value>Time Left in Auction</value>
+  </data>
 </root>
