MZ-88 Show user's trophies in dashboard

--- a/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.ar.resx
@@ -456,4 +456,16 @@
   <data name="Subtotal" xml:space="preserve">
     <value>المجموع الفرعي</value>
   </data>
+  <data name="AwardedOn" xml:space="preserve">
+    <value>منحت فى</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>الوصف</value>
+  </data>
+  <data name="Trophies" xml:space="preserve">
+    <value>الجوائز</value>
+  </data>
+  <data name="XpAward" xml:space="preserve">
+    <value>النقاط</value>
+  </data>
 </root>
