MZ-93 building out Buy Now view

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -642,4 +642,10 @@
   <data name="Specifications" xml:space="preserve">
     <value>Specifications</value>
   </data>
+  <data name="BuyNowPrice" xml:space="preserve">
+    <value>Buy Now Price: {BuyNowPrice}</value>
+  </data>
+  <data name="OutOfStockErrorMessage" xml:space="preserve">
+    <value>We're sorry, this product is no longer in stock or available.</value>
+  </data>
 </root>
