MZ-93 styled header and nav; add stubs for home pages

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -648,4 +648,10 @@
   <data name="OutOfStockErrorMessage" xml:space="preserve">
     <value>We're sorry, this product is no longer in stock or available.</value>
   </data>
+  <data name="About" xml:space="preserve">
+    <value>About</value>
+  </data>
+  <data name="ContactUs" xml:space="preserve">
+    <value>Contact Us</value>
+  </data>
 </root>
