MZ-105 added trophy list to dashboard

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -678,4 +678,10 @@
   <data name="Tokens" xml:space="preserve">
     <value>Tokens</value>
   </data>
+  <data name="TrophiesAchieved" xml:space="preserve">
+    <value>Trophies Achieved</value>
+  </data>
+  <data name="ViewAll" xml:space="preserve">
+    <value>View All</value>
+  </data>
 </root>
