--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -436,7 +436,7 @@
     <value>Save And Continue</value>
   </data>
   <data name="AllowPhoneSmsLabel" xml:space="preserve">
-    <value>Allow Phone Sms </value>
+    <value>Allow Phone SMS</value>
   </data>
   <data name="No" xml:space="preserve">
     <value>No</value>
@@ -463,7 +463,7 @@
     <value>Add Item</value>
   </data>
   <data name="AddToWishList" xml:space="preserve">
-    <value>Add to my wishlist</value>
+    <value>Add to Wishlist</value>
   </data>
   <data name="RemoveItem" xml:space="preserve">
     <value>Remove Item</value>
@@ -696,7 +696,28 @@
   <data name="ItemsWon" xml:space="preserve">
     <value>Items Won</value>
   </data>
+  <data name="AutoBid" xml:space="preserve">
+    <value>Auto Bid</value>
+  </data>
+  <data name="Bid" xml:space="preserve">
+    <value>Bid</value>
+  </data>
+  <data name="CurrentAuctionPrice" xml:space="preserve">
+    <value>Current Auction Price</value>
+  </data>
+  <data name="Hours" xml:space="preserve">
+    <value>Hours</value>
+  </data>
+  <data name="LiveAuctions" xml:space="preserve">
+    <value>Live Auctions</value>
+  </data>
+  <data name="Minutes" xml:space="preserve">
+    <value>Minutes</value>
+  </data>
   <data name="NoTrophiesMessage" xml:space="preserve">
     <value>You have no trophies yet but there are a lot of ways to earn them, keep using the site and you'll get one soon.</value>
+  </data>
+  <data name="Seconds" xml:space="preserve">
+    <value>Seconds</value>
   </data>
 </root>
