MZ-125 updated Core; fixed null Redis cache list issue

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -741,4 +741,7 @@
   <data name="SetAutoBid" xml:space="preserve">
     <value>Set Auto Bid</value>
   </data>
+  <data name="AuctionWinMessage" xml:space="preserve">
+    <value>Congratulations {FirstName} you've won! First things first, please enter your shipping address below.</value>
+  </data>
 </root>
