MZ-163 added avatar on registeration page

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -765,4 +765,7 @@
   <data name="UpcomingAuctions" xml:space="preserve">
     <value>Upcoming Auctions</value>
   </data>
+  <data name="SelectAvatarErrorMessage" xml:space="preserve">
+    <value>Please select your avatar.</value>
+  </data>
 </root>
