--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -765,6 +765,12 @@
   <data name="UpcomingAuctions" xml:space="preserve">
     <value>Upcoming Auctions</value>
   </data>
+  <data name="Birthdate" xml:space="preserve">
+    <value>Birthdate</value>
+  </data>
+  <data name="Day" xml:space="preserve">
+    <value>Day</value>
+  </data>
   <data name="Female" xml:space="preserve">
     <value>Female</value>
   </data>
@@ -773,5 +779,11 @@
   </data>
   <data name="Male" xml:space="preserve">
     <value>Male</value>
+  </data>
+  <data name="Month" xml:space="preserve">
+    <value>Month</value>
+  </data>
+  <data name="Year" xml:space="preserve">
+    <value>Year</value>
   </data>
 </root>
