--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -789,4 +789,13 @@
   <data name="Year" xml:space="preserve">
     <value>Year</value>
   </data>
+  <data name="NoEnoughTokensErrorMessage" xml:space="preserve">
+    <value>Subscription cannot be purchased, user does not have enough available tokens.</value>
+  </data>
+  <data name="SubscriptionNotValidForPurchaseErrorMessage" xml:space="preserve">
+    <value>Subscription is not valid for purchase.</value>
+  </data>
+  <data name="SubscriptionNotValidForPurchaseWithTokensErrorMessage" xml:space="preserve">
+    <value>Subscription is not valid for purchase with tokens.</value>
+  </data>
 </root>
