MZ-175 add user property to control autobid notifications; add section in user notifications page for auto bids

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -798,4 +798,7 @@
   <data name="SubscriptionNotValidForPurchaseWithTokensErrorMessage" xml:space="preserve">
     <value>Subscription is not valid for purchase with tokens.</value>
   </data>
+  <data name="AutoBidNotificationInstruction" xml:space="preserve">
+    <value>Notify me for auto bids</value>
+  </data>
 </root>
