MZ-181 add Floor and FlatNo to user address

--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -801,4 +801,10 @@
   <data name="AutoBidNotificationInstruction" xml:space="preserve">
     <value>Notify me for auto bids</value>
   </data>
+  <data name="FlatNumber" xml:space="preserve">
+    <value>Flat No.</value>
+  </data>
+  <data name="Floor" xml:space="preserve">
+    <value>Floor</value>
+  </data>
 </root>
