--- a/src/Mzayad.Web/App_GlobalResources/Global.resx
+++ b/src/Mzayad.Web/App_GlobalResources/Global.resx
@@ -822,4 +822,7 @@
   <data name="UAE" xml:space="preserve">
     <value>UAE</value>
   </data>
+  <data name="Bahrain" xml:space="preserve">
+    <value>Bahrain</value>
+  </data>
 </root>
